test/spec_vectors/if/fail/module_29.wat
(module (func $type-then-value-empty-vs-num (result i32) (if (result i32) (i32.const 1) (then) (else (i32.const 0)))))